--- a/Source/V8.Net/V8.Net-Standard.csproj
+++ b/Source/V8.Net/V8.Net-Standard.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <LangVersion>latest</LangVersion>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <RootNamespace>V8.Net</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
